import("//build/buildflag_header.gni")
import("//build/config/compiler/compiler.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojo_ipc_worker") {
  sources = [
    "mojom/ipc_worker.mojom",
  ]
}

executable("echo_server") {
  sources = [
    "echo_server/engine.cc",
    "echo_server/engine.h",
    "echo_server/main.cc",
    "echo_server/options.cc",
    "echo_server/options.h",
    "echo_server/poll.cc",
    "echo_server/poll.h",
    "echo_server/poll_async.cc",
    "echo_server/poll_async.h",
    "echo_server/poll_mojo.cc",
    "echo_server/poll_mojo.h",
    "echo_server/select.cc",
    "echo_server/select.h",
    "echo_server/server.cc",
    "echo_server/server.h",
    "echo_server/utils.cc",
    "echo_server/utils.h",
    # "mojom/bar_impl.cc",
    # "mojom/bar_impl.h",
    "mojom/ipc_worker.cc",
    "mojom/ipc_worker.h",
  ]

  public_deps = [
    # ":mojo_example_bar",
    ":mojo_ipc_worker",
    "//base",
    "//mojo/core/embedder",
    "//mojo/public/cpp/platform",
    "//mojo/public/cpp/system",
  ]
}

executable("echo_worker") {
  sources = [
    "echo_worker/main.cc",
    # "mojom/bar_impl.cc",
    # "mojom/bar_impl.h",
    "mojom/ipc_worker.cc",
    "mojom/ipc_worker.h",
    "echo_server/poll_mojo.cc",
    "echo_server/poll_mojo.h",
    "echo_server/engine.cc",
    "echo_server/engine.h",
  ]

  public_deps = [
    # ":mojo_example_bar",
    ":mojo_ipc_worker",
    "//base",
    "//mojo/core/embedder",
    "//mojo/public/cpp/platform",
    "//mojo/public/cpp/system",
  ]
}
